--- a/package.json
+++ b/package.json
@@ -9,16 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.0.1",
+    "@react-three/fiber": "^8.0.4",
+    "@types/three": "^0.139.0",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "styled-components": "^5.3.5",
+    "three": "^0.139.1"
   },
   "devDependencies": {
+    "@pixiv/three-vrm": "^0.6.10",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
+    "next-transpile-modules": "^9.0.0",
+    "react-three-fiber": "^6.0.13",
     "typescript": "4.6.3"
   }
 }
