--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {
     "@pixiv/three-vrm": "^0.6.10",
     "@types/node": "17.0.23",
-    "@types/react": "17.0.43",
+    "@types/react": "^17.0.43",
     "@types/react-dom": "17.0.14",
     "@types/styled-components": "^5.1.24",
     "eslint": "8.12.0",
