--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
   },
   "devDependencies": {
     "@pixiv/three-vrm": "^0.6.10",
-    "@types/node": "17.0.23",
+    "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "@types/react-dom": "17.0.14",
     "@types/styled-components": "^5.1.24",
+    "babel-plugin-styled-components": "^2.0.6",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
     "next-transpile-modules": "^9.0.0",
     "react-three-fiber": "^6.0.13",
-    "typescript": "4.6.3"
+    "typescript": "^4.6.3"
   }
 }
